syntax = "proto3";

package config;

import "google/protobuf/struct.proto";

option go_package = "github.com/ethpandaops/lab/backend/pkg/server/proto/config";

// ConfigService provides configuration for the lab application.
// This replaces the legacy GetConfig from the lab service.
service ConfigService {
  // GetConfig returns the complete frontend configuration including networks and modules.
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  // GetExperimentConfig returns a single experiment's configuration with data availability.
  rpc GetExperimentConfig(GetExperimentConfigRequest) returns (GetExperimentConfigResponse);
  // GetNetworkExperimentConfig returns a single experiment's configuration with data availability for a specific network.
  rpc GetNetworkExperimentConfig(GetNetworkExperimentConfigRequest) returns (GetExperimentConfigResponse);
}

// GetConfigRequest is empty for now but allows future expansion
message GetConfigRequest {}

// GetConfigResponse contains the complete configuration
message GetConfigResponse {
  // The main configuration object
  FrontendConfig config = 1;
}

// FrontendConfig represents the complete frontend configuration
message FrontendConfig {
  // Ethereum configuration including networks
  EthereumConfig ethereum = 1;
  // List of experiments
  repeated ExperimentConfig experiments = 2;
}

// EthereumConfig contains Ethereum-related configuration
message EthereumConfig {
  // Map of network name to network configuration
  map<string, NetworkConfig> networks = 1;
}

// NetworkConfig represents configuration for a single network
message NetworkConfig {
  // Network name
  string name = 1;
  // Network status
  string status = 2;
  // Chain ID
  int64 chain_id = 3;
  // Description
  string description = 4;
  // Genesis time as Unix timestamp
  int64 genesis_time = 5;
  // Fork information
  ForkConfig forks = 6;
  // Last updated timestamp
  string last_updated = 7;
}

// ForkConfig contains fork information
message ForkConfig {
  // Consensus layer forks
  ConsensusForks consensus = 1;
}

// ConsensusForks contains consensus layer fork information
message ConsensusForks {
  // Electra fork info
  ForkInfo electra = 1;
  // Fusaka fork info
  ForkInfo fusaka = 2;
}

// ForkInfo contains information about a specific fork
message ForkInfo {
  // Epoch when the fork activates
  int64 epoch = 1;
  // Minimum client versions
  map<string, string> min_client_versions = 2;
}


// ExperimentsConfig contains all experiments configuration
message ExperimentsConfig {
  // List of available experiments
  repeated ExperimentConfig experiments = 1;
}

// ExperimentConfig represents a single experiment
message ExperimentConfig {
  // Unique identifier for the experiment
  string id = 1;
  // Whether this experiment is enabled
  bool enabled = 2;
  // Networks this experiment supports
  repeated string networks = 3;
  // Data availability per network
  map<string, ExperimentDataAvailability> data_availability = 4;
  // Experiment-specific configuration
  google.protobuf.Struct config = 5;
}

// ExperimentDataAvailability contains data availability information for an experiment on a specific network
message ExperimentDataAvailability {
  // Earliest available slot number
  uint64 min_slot = 1;
  // Latest available slot number
  uint64 max_slot = 2;
}

// GetExperimentConfigRequest defines the request for getting a single experiment's configuration.
message GetExperimentConfigRequest {
  // The experiment ID to get configuration for
  string experiment_id = 1;
}

// GetNetworkExperimentConfigRequest defines the request for getting a single experiment's configuration for a specific network.
message GetNetworkExperimentConfigRequest {
  // The experiment ID to get configuration for
  string experiment_id = 1;
  // The network to get configuration for
  string network = 2;
}

// GetExperimentConfigResponse returns a single experiment's full configuration with data availability.
message GetExperimentConfigResponse {
  // The experiment configuration with data availability
  ExperimentConfig experiment = 1;
}